--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,199 @@
-.App {
-  text-align: center;
+body{
+  height: 100vh;
+  /* background-image: url(https://w0.peakpx.com/wallpaper/833/392/HD-wallpaper-neon-city-tram-night-urban-raining-hoodie-city.jpg); */
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+.bigContainer{
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  background-image: url('./bg2.jpg');
+  filter: saturate(150%);
+  display: flex;
+  flex-direction: column-reverse;
+  height: 100vh;
+  width: 100vw;
+  background-position-y: -100px;
+  background-size: cover;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
   flex-direction: column;
+  /* background-image: url(../background/photo2.png); */
+  background-repeat: no-repeat;
+  background-position-y: -110px;
+  /* background-position-x: 1px; */
+  /* background-color: #ef763d; */
+  background-size: cover;
+  height: 400px;
+  width: 300px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border-radius: 30px;
+  position: relative;
+  position: relative;
+}
+.container .input{
+  outline: none;
+  border: none;
+  padding: 10px;
+  border-radius: 50px;
+  padding-inline: 30px;
+  margin-top: 25px;
+  margin-left: 50px;
+}
+
+.fa-solid{
+  position: absolute;
+  right: 18px;
+  top: 34px;
+}
+.temp{
+  /* position: absolute; */
+  display: none;
+  color: black;
+  font-size: 70px;
+  margin-top: 2px;
+  /* margin-right: 20px; */
+  /* top: 10%; */
+  /* left: 13%; */
+  margin-bottom: 0;
+  display: none;
+}
+.cityname{
+  display: none;
+  color: black;
+  font-size: 40px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  display: none;
+  
+}
+.smallconatiner-1{
+  display: none;
+  padding-right: 50px;
+  display: none;
+  
+}
+.weatherchange{
+  display: none;
+}
+.smallconatiner-2{
+  padding-right: 60px;
+  display: none;
+}
+.tempcontainer{
+  display: flex;
+  gap: 10px;
+  display: none;
+}
+.suraj{
+  height: 50px;
+  position: absolute;
+  left: 5px;
+  top: 15px;
+  display: none;
+}
+.chand{
+  display: none;
+  height: 50px;
+  position: absolute;
+  left: 5px;
+  top: 15px;
+}
+.changeIcon{
+  height: 80px;
+  position: absolute;
+  display: none;
+  top: 230px;
+  right: 5px;
+}
+#citynotfound{
+  animation: 1.5s jj infinite ;
+  /* display: none; */;
+  color: #293241;
+}
+
+@keyframes jj {
+  0%{
+      transform: translateY(5px);
+    }
+    50%{
+      transform: translateY(20px);
+    }
+    100%{
+    transform: translateY(5px);
+  }
+}
+.warning{
+  height: 150px;
+  /* align-items: center; */
+  /* margin: auto; */
+    /* text-align: center; */
+    margin-left: 12px;
+}
+.time{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  font-size: 100%;
+  border-radius: 5px;
+  padding: 30px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 1);
+  -webkit-backdrop-filter: blur(5.2px);
+  backdrop-filter: blur(5.2px);
   color: white;
-}
+  background: rgba( 255, 255, 255, 0.35 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 0px );
+-webkit-backdrop-filter: blur( 0px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+position: absolute;
+top: 10px;
+right: 50px;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
+.hero{
+  display: flex;
+  gap: 10px;
+}
+.day,.hour,.bar1,.bar2,.sec,.min,.ampm{
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+@keyframes glow {
   from {
-    transform: rotate(0deg);
+    text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #f5b88b, 0 0 4px #f5b88b, 0 0 4px #f5b88b, 0 0 4px #f5b88b, 0 0 4px #f5b88b;
   }
   to {
-    transform: rotate(360deg);
+    text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #f5b88b, 0 0 4px #f5b88b, 0 0 4px #f5b88b, 0 0 4px #f5b88b, 0 0 4px #f5b88b;
+  }
+}
+.day2,.hour2,.bar12,.bar22,.sec2,.min2,.ampm2{
+  -webkit-animation: gloww 1s ease-in-out infinite alternate;
+  -moz-animation: gloww 1s ease-in-out infinite alternate;
+  animation: gloww 1s ease-in-out infinite alternate;
+}
+@keyframes gloww {
+  from {
+    text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #66fcf1, 0 0 4px #66fcf1, 0 0 4px #66fcf1, 0 0 4px #66fcf1, 0 0 4px #66fcf1;
+  }
+  to {
+    text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #66fcf1, 0 0 4px #66fcf1, 0 0 4px #66fcf1, 0 0 4px #66fcf1, 0 0 4px #66fcf1;
+  }
+}
+@media only screen and (max-width: 500px) {
+.time{
+  /* position: absolute; */
+    position: relative;
+    margin-inline: auto;
+  right: 0px;
+
   }
 }
